# plinth-cape-submissions

./: .envrc  .envrc.local.template  .gitignore  CLAUDE.md  README.md  cabal.project  cabal.project.preview  flake.nix  plinth-cape-submissions.cabal  treefmt.toml
.github/: copilot-instructions.md
lib/: Ecd.hs  Factorial.hs  Fibonacci.hs  FibonacciIterative.hs  HTLC.hs  LinearVesting.hs  TwoPartyEscrow.hs
lib/Cape/: WritePlc.hs
lib/HTLC/: Fixture.hs
lib/LinearVesting/: Fixture.hs
lib/Preview/: Ecd.hs  Factorial.hs  Fibonacci.hs  FibonacciIterative.hs  HTLC.hs  LinearVesting.hs  TwoPartyEscrow.hs
lib/TwoPartyEscrow/: Fixture.hs
plinth-submissions-app/: Main.hs
plinth-submissions-preview-app/: Main.hs
scripts/: sweep-cells.sh  sweep-extra-htlc.csv  sweep-inline.sh  sweep-knee-htlc.csv  sweep-results-htlc.csv
