cabal-version: 3.4
name:          plinth-cape-submissions
version:       1.0.0
synopsis:      Plinth source tree for UPLC-CAPE benchmark submissions
description:
  Plinth (PlutusTx) source for the benchmark scenarios measured by the
  UPLC-CAPE framework (https://github.com/IntersectMBO/UPLC-CAPE).
  Builds @.uplc@ artefacts that are committed into a sibling UPLC-CAPE
  checkout under @submissions/<scenario>/Plinth_<ver>_Unisay/@.

author:        UPLC-CAPE Project
maintainer:    UPLC-CAPE Project
category:      Blockchain
license:       Apache-2.0

flag preview
  description:
    Build with @datatypes=BuiltinCasing@ enabled; .uplc lands under a
    @-builtin-casing@ submission directory instead of the production one.

  default:     False
  manual:      True

common common-deps
  build-depends:
    , base               >=4.16
    , bytestring
    , mtl
    , plutus-core        ^>=1.65
    , plutus-ledger-api  ^>=1.65
    , plutus-tx          ^>=1.65
    , plutus-tx-plugin   ^>=1.65
    , relude             ^>=1.2.2
    , text

common common-language-base
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wpartial-fields

  default-language:   Haskell2010
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    ScopedTypeVariables
    Strict
    TemplateHaskell
    TypeApplications
    TypeFamilies
    UndecidableInstances
    ViewPatterns

common common-language
  import: common-language-base
  import: common-deps

-- Plinth validator sources for every UPLC-CAPE benchmark scenario.
-- The shared @-fplugin@ and global plugin opts live here. Per-scenario
-- inliner tuning (@inline-unconditional-growth@,
-- @inline-callsite-growth@) is set with @OPTIONS_GHC@ pragmas in the
-- scenario module itself — but those pragmas only reach the plugin if
-- the @PlutusTx.compile@ splice lives in that same module. Toggling
-- the @preview@ flag selects the BuiltinCasing variant without a
-- parallel source tree.
library
  import:          common-language
  exposed-modules:
    Cape.WritePlc
    Ecd
    Factorial
    Fibonacci
    FibonacciIterative
    HTLC
    HTLC.Fixture
    LinearVesting
    LinearVesting.Fixture
    TwoPartyEscrow
    TwoPartyEscrow.Fixture

  build-depends:
    , directory
    , filepath
    , plutus-core
    , plutus-tx
    , plutus-tx-plugin

  ghc-options:
    -fplugin Plinth.Plugin
    -fplugin-opt Plinth.Plugin:target-version=1.1.0
    -fplugin-opt Plinth.Plugin:defer-errors
    -fplugin-opt Plinth.Plugin:no-conservative-optimisation
    -fplugin-opt Plinth.Plugin:no-preserve-logging
    -fplugin-opt Plinth.Plugin:remove-trace

  if flag(preview)
    ghc-options: -fplugin-opt Plinth.Plugin:datatypes=BuiltinCasing
    cpp-options: -DPREVIEW

  hs-source-dirs:  lib

-- Plinth submissions generator. Writes one @.uplc@ per scenario into the
-- sibling UPLC-CAPE checkout (set @CAPE_REPO@ if it is not at
-- @../UPLC-CAPE@). With the @preview@ flag set, the @PREVIEW@ CPP define
-- redirects every write to the @-builtin-casing@ submission directory.
--   CAPE_REPO=../UPLC-CAPE cabal run plinth-submissions
--   CAPE_REPO=../UPLC-CAPE cabal --flags=preview run plinth-submissions
executable plinth-submissions
  import:         common-language
  main-is:        Main.hs
  build-depends:
    , plinth-cape-submissions
    , plutus-core
    , plutus-tx
    , plutus-tx-plugin

  if flag(preview)
    cpp-options: -DPREVIEW

  hs-source-dirs: plinth-submissions-app
